--- a/src/Gogole/MainBundle/Resources/config/routing.yml
+++ b/src/Gogole/MainBundle/Resources/config/routing.yml
@@ -1,7 +1,3 @@
 gogole_main_homepage:
     path:     /
-    defaults: { _controller: GogoleTchatBundle:Tchat:main }
-
-gogole_main_homepage:
-    path:   /
-    defaults: { _controller: GogoleTodoBundle:Todo:main }
+    defaults: { _controller: GogoleMainBundle:Main:index }
