--- a/src/Gogole/MainBundle/Resources/config/routing.yml
+++ b/src/Gogole/MainBundle/Resources/config/routing.yml
@@ -1,6 +1,6 @@
 gogole_main_homepage:
     path:     /
-    defaults: { _controller: GogoleTchatBundle:Tchat:main }
+    defaults: { _controller: GogoleTchatBundle:Tchat:tchat }
 
 gogole_main_homepage:
     path:   /
