--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -87,3 +87,11 @@ fos_user:
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
 
+blade_tester_calendar:
+    driver: doctrine/orm
+    engine: twig
+    classes:
+        event:
+            entity: Gogole\CalendarBundle\Entity\Event
+        category:
+            entity: BladeTester\CalendarBundle\Entity\EventCategory
