--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,7 +1,7 @@
 security:
 
     encoders:
-        FOS\UserBundle\Model\UserInterface: plaintext
+        FOS\UserBundle\Model\UserInterface: bcrypt
 
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
@@ -21,14 +21,16 @@ security:
                 use_forward:	false
                 check_path: 	fos_user_security_check
                 failure_path:	null
-                default_target_path: /main/
+                default_target_path: /main/todo
                 remember_me : 	true
             remember_me:
                 key: 	  		%secret%
                 lifetime: 		300000000
-                path:     		/main/
+                path:     		/main/todo
                 domain:   		~
-            logout:       true 		
+            logout:       
+               path:            fos_user_security_logout
+               target:          /
             anonymous:    true
 
 
